# msip-routetemplate-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
properties/: UAT.env
src/msip_python_generic/: app.py  my_utils.py
supporting_files/: Honda Root CA North America v1.pem
