[tool.poetry]
name = "msip-python-generic"
version = "0.0.4"
description = "Generic Python Production-Ready Server"
authors = ["dburnside <davis_g_burnside@na.honda.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "artifactory"
url = "http://artifactory.amerhonda.com:8081/artifactory/api/pypi/python-binaries/simple"
default = true
